# byewords

./: .gitignore  AGENTS.md  README.md  pyproject.toml  verify.sh
docs/: implementation.md  issues.md  plan.md  theme.md  uid.md  vectors.md
public/: index.html  wrangler.jsonc
src/byewords/: __init__.py  __main__.py  cache.py  cli.py  clue_bank.py  clues.py  data_maintenance.py  generate.py  grid.py  groq_clues.py  lexicon.py  prefixes.py  puz.py  puzzle_store.py  render.py  score.py  search.py  theme.py  theme_index_builder.py  types.py
src/byewords/data/: clue_bank.json  clue_overrides.json  related_words.json  word_vectors.json  words_5.txt
tests/: fixtures.py  test_cli.py  test_clues.py  test_codex_loop_script.py  test_data_files.py  test_data_maintenance.py  test_docs_phil_comparison.py  test_generate.py  test_grid.py  test_groq_clues.py  test_lexicon.py  test_prefixes.py  test_public_index.py  test_puz.py  test_puzzle_store.py  test_render.py  test_score.py  test_search.py  test_theme.py  test_theme_doc.py  test_theme_index_builder.py  test_uid_doc.py  test_vectors_doc.py  test_wrangler_config.py
tools/: build_clue_bank.py  generate_groq_clues.py  run_codex_theme_loop.sh  sort_bundled_data.py
